desktop arrumado porém precisa fixar algumas posições de botoes

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
                     <h2>Descubra o caminho para se tornar um especialista em cuidados com as <span style="font-weight: bold;">mãos</span> e os <b><i>pés</i></b> com o nosso curso!</h2><br>
                 </div>
+                <div class="content" id="animatedtxt2">
                 <div class="textoSobre1">
                     <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, <br>combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p>
                     <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> <br> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p>
@@ -103,6 +104,7 @@
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
+                </div>
     </section>
     <!-- nullpoint -->
     <section id="null">
@@ -118,6 +120,7 @@
                     <br>
                     <div class="maptitle">
                         <br><h3>Unidade Campinas</h3><br>
+                    </div>
                         <div class="mapframe">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.80588228712415!2d-47.13909829752078!3d-22.843406578635943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b91f8c592e15%3A0x9134d3d23298b319!2sEspa%C3%A7o%20Nobre%20Mirassol!5e0!3m2!1spt-BR!2sbr!4v1711383829225!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div><br>
@@ -125,7 +128,6 @@
                         <h4>Jardim Mirassol</h4>
                         <h4>Campinas/SP</h4>
                         <h4>13069-502</h4><br>
-                    </div>
                     <br>
                 </div>
             </div>
