--- a/index.html
+++ b/index.html
@@ -9,31 +9,32 @@
     <title>Academia de Beleza - Girassol</title>
 
 </head>
-<header id="Inicio">
-    <!-- Cabeçalho -->
-    <div class="Container Flex">
-        <div id="logo">
-            <a href="index.html"><img src="img/logotop.png" alt="Logotipo" href="index.html"></a>
-        </div>
-    <nav>
-            <!-- Menu retratil -->
-        <div class="desktop-menu">
-        <input type="checkbox" name="menu" id="check">
-        <label for="check">&#x268c;</label>
-        <ul>
-            <div class="menu-item"><li><a href="#Cursos">Cursos Profissionalizantes</a></li></div>
-            <div class="menu-item"><li><a href="#LOCAL">Localização</a></li></div>
-            <div class="menu-item"><li><a href="#Sobre">Sobre a escola</a></li></div>
-            <div class="menu-item"><li><a href="#Contato">Fale Conosco</a></li></div>
-        </ul>
-        </div>
-    </nav>
-    </div>
-</header>
-<div class="line">
-
-</div>
 <body>
+    <header id="Inicio">
+        <!-- Cabeçalho -->
+        <div class="Container Flex">
+            <div id="logo">
+                <a href="index.html"><img src="img/logotop.png" alt="Logotipo" href="index.html"></a>
+            </div>
+        <nav>
+                <!-- Menu retratil -->
+            <div class="desktop-menu">
+            <input type="checkbox" name="menu" id="check">
+            <label for="check">&#x268c;</label>
+            <ul>
+                <div class="menu-item"><li><a href="#Servicos">Serviços Especializados</a></li></div>
+                <div class="menu-item"><li><a href="#Cursos">Cursos Profissionalizantes</a></li></div>
+                <div class="menu-item"><li><a href="#LOCAL">Localização</a></li></div>
+                <div class="menu-item"><li><a href="#Sobre">Sobre a escola</a></li></div>
+                <div class="menu-item"><li><a href="#Contato">Fale Conosco</a></li></div>
+            </ul>
+            </div>
+        </nav>
+        </div>
+    </header>
+    <div class="line">
+    
+    </div>
      <!-- Destaque -->
     <main>
         <div class="Container">
@@ -49,20 +50,57 @@
                 <a href="#Cursos"><button>Saiba mais!</button></a>
             </div>
         </div>
+        <div class="carousel-cell" style="background-image: url(img/afiacaobg.jpg); top: -30px;">
+            <div class="info-container" style="top: 30px;">
+                <h3 class="header">Serviço especializado</h3>
+                <h2 class="text">Afiação de Alicates</h2>
+                <a href="#Servicos"><button >Fale conosco!</button></a>
+            </div>
+        </div>
         <div class="carousel-cell" style="background-image: url(img/fundo.jpg);">
             <div class="info-container">
-                <h3 class="header">Sobre nossa</h3>
+                <h3 class="header" style="margin-left: -10px;">Sobre nossa</h3>
                 <h2 class="text">Escola</h2>
                 <a href="#Sobre"><button >Conheça mais!</button></a>
             </div>
         </div>
-        <div class="carousel-cell" style="background-image: url(img/abertas.png);">
+        <div class="carousel-cell" style="background-image: url(img/abertas1.png);">
             <div class="info-container">
                 <h3 class="header"> </h3>
                 <h2 class="text">Design de Unhas</h2>
                 <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button >Inscrever-se</button></a>
             </div>
         </div>
+    </div>
+    <!-- Serviços Especializados -->
+    <section id="Servicos">   
+        <div class="Container Row">
+            <div class="content" id="animatedtxt3">
+                <div class="destaqueSobre3">
+                    <h1><strong>Serviço de Afiação de Alicates para Manicure Profissional</strong></h1>
+                    <!-- <h1><strong>• Girassol •</strong></h1><br> -->
+                    <h3> </h3><br>
+                </div>
+                 <div class="textoSobre3">
+                    <div class="destaqueserv"><p>Você sabia que a afiação regular dos seus alicates para unhas é essencial para garantir resultados impecáveis e seguros em suas manicures? Estamos aqui para cuidar da qualidade e eficácia dos seus instrumentos de trabalho, oferecendo um serviço especializado de afiação de alicates para manicure.                        
+                        Nossos profissionais altamente qualificados e experientes utilizam técnicas precisas e equipamentos de última geração para restaurar o corte afiado dos seus alicates, garantindo que você possa realizar manicures com precisão e confiança.</p><br>
+                        </div>
+                        <div class="textoservicos">
+                        <br><h3>Por que escolher nossos serviços de afiação de alicates:</h3><br>
+                        <b>Segurança em Primeiro Lugar:</b><br> Manter seus alicates afiados é essencial para evitar lesões e garantir a segurança tanto dos profissionais quanto dos clientes durante os procedimentos de manicure. <br><br>
+                        <p><b>Qualidade Garantida:</b><br> Comprometemo-nos em fornecer afiação de alta qualidade, preservando a integridade dos seus alicates e garantindo resultados excepcionais. <br><br>
+                        <b>Conveniência e Agilidade:</b><br> Com um processo de afiação rápido e eficiente, você pode contar com a rápida recuperação dos seus alicates para voltar ao trabalho sem demora. <br><br>
+                        <b>Economia e Sustentabilidade:</b><br> A afiação regular dos seus alicates prolonga sua vida útil, ajudando você a economizar dinheiro a longo prazo e reduzindo o impacto ambiental do descarte frequente de instrumentos. <br><br>
+                        </p></div>
+                    <p>Entre em contato conosco hoje mesmo para saber mais sobre nossos serviços de afiação de alicates e agende uma afiação para seus instrumentos de trabalho indispensáveis!</p>
+                </div>
+            </div>
+            <div class="foto3" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
+            </div>
+        </div>
+    </section>
+    <div class="linemid1">
+        
     </div>
     <!-- Sobre -->
     <section id="Sobre">   
@@ -98,9 +136,9 @@
                 </div>
                 <div class="content" id="animatedtxt2">
                 <div class="textoSobre1">
-                    <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, <br>combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p>
-                    <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> <br> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p>
-                    <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais <br> necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> <br> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p>
+                    <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p> <br>
+                    <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p><br>
+                    <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
@@ -132,7 +170,6 @@
                 </div>
             </div>
         </section>
-</body>
 <footer>
      <!-- CONTATOS -->
      <div class="linebot2">
@@ -176,4 +213,5 @@
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <a href="#Inicio" id="topo"><img src="img/topicon.png" alt="Para o inicio"></a>
+</body>
 </html>
