desktop e smarphone revisados, animações adicionadas

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                 </div>
             </div>
             <div class="foto3" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
+                <a href="https://abrir.link/BOhfx" target="_blank" rel="noopener noreferrer" id="botaoservico">Whatsapp</a>
             </div>
         </div>
     </section>
