--- a/index.html
+++ b/index.html
@@ -129,18 +129,30 @@
     </div>
     <section id="Cursos">   
         <div class="Container">
-            <div class="foto2" id="coursepic">
+            <div class="destaqueSobre1">
+                <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
+                <h2>Descubra o caminho para se tornar um especialista em cuidados com as mãos e os pés com o nosso curso!</h2><br>
             </div>
-                <div class="destaqueSobre1">
-                    <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
-                    <h2>Descubra o caminho para se tornar um especialista em cuidados com as <span style="font-weight: bold;">mãos</span> e os <b><i>pés</i></b> com o nosso curso!</h2><br>
-                </div>
+            <div class="infocurso">
+                <h1>Conteúdo Online e Aulas Presenciais:</h1>
+                <h2>Professora presencial para dar o <span style="color: #ff5500;">APOIO</span> necessário aos alunos.</h2><br>
+                <h1>Módulo Duplo:</h1>
+                <h2>Apostilas contendo módulo <span style="color: #ff5500;">teórico</span> e <span style="color: #ff5500;">prático.</span></h2><br>
+                <h1>Modalidade: <br><span style="color: #ff5500;">Semi-presencial</span></h1><br>
+                <h1>Carga Horária: <br><span style="color: #ff5500;">60 Horas</span></h1><br>
+                <h1>Acesso Imediato:</h1>
+                <h2>Assim que a sua inscrição for confirmada <br> você vai receber o acesso <span style="color: #ff5500;">IMEDIATAMENTE</span> em seu email.</h2>
+                
+            </div>
+            <div class="foto2" id="coursepic" onclick="window.open('https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure.', '_blank');">
+                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever2">INSCREVER-SE</button></a>
+            </div>
                 <div class="content" id="animatedtxt2">
                 <div class="textoSobre1">
                     <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p> <br>
                     <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, <br>nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p><br>
                     <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
-                    <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> <br> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
+                    <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece <br> o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
                 <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
                 </div>
