--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         <div class="contact">
                             <section id="Contato">
                                 <div class="Container  Flex4">
-                                    <a href="https://www.facebook.com/academiagirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
+                                    <a href="https://www.facebook.com/academygirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
                                     <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
                                 </div>
                             </section>
