icon color changed, layout responsive ok, version beta 1.3 launched

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <p>Entre em contato conosco hoje mesmo para saber mais sobre nossos serviços de afiação de alicates e agende uma afiação para seus instrumentos de trabalho indispensáveis!</p>
                 </div>
             </div>
-            <div class="foto3" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
+            <div class="foto3" alt="INSCREVA-SE!" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
                 <a href="https://abrir.link/BOhfx" target="_blank" rel="noopener noreferrer" id="botaoservico">Whatsapp</a>
             </div>
         </div>
@@ -144,8 +144,8 @@
                 <h2>Assim que a sua inscrição for confirmada <br> você vai receber o acesso <span style="color: #ff5500;">IMEDIATAMENTE</span> em seu email.</h2>
                 
             </div>
-            <div class="foto2" id="coursepic" onclick="window.open('https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure.', '_blank');">
-                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever2">INSCREVER-SE</button></a>
+            <div class="foto2" id="coursepic" onclick="window.open('https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure.', '_blank');">
+                <a href="https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever2">INSCREVER-SE</button></a>
             </div>
                 <div class="content" id="animatedtxt2">
                 <div class="textoSobre1">
@@ -154,7 +154,7 @@
                     <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=551997013275&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
+                <a href="https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
                 </div>
     </section>
     <!-- nullpoint -->
@@ -173,12 +173,12 @@
                         <br><h3>Unidade Campinas</h3><br>
                     </div>
                         <div class="mapframe">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.80588228712415!2d-47.13909829752078!3d-22.843406578635943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b91f8c592e15%3A0x9134d3d23298b319!2sEspa%C3%A7o%20Nobre%20Mirassol!5e0!3m2!1spt-BR!2sbr!4v1711383829225!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d668.2807907419797!2d-47.14027509602145!3d-22.84153681180022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8b8ab4229addf%3A0xf4136ad4f1b08ced!2sRua%20Manoel%20Adriano%20de%20Andrade%20Godoy%2C%20165%20-%20Nova%20Aparecida%2C%20Campinas%20-%20SP%2C%2013069-524!5e1!3m2!1spt-BR!2sbr!4v1713188349006!5m2!1spt-BR!2sbr" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapframe1"></iframe>
                         </div><br>
-                        <h4>R. Irmão Robert Earl Hollingsworth - 08</h4>
+                        <h4>R. Manoel Adriano de Andrade Godoy - 165</h4>
                         <h4>Jardim Mirassol</h4>
                         <h4>Campinas/SP</h4>
-                        <h4>13069-502</h4><br>
+                        <h4>13069-524</h4><br>
                     <br>
                 </div>
             </div>
@@ -191,7 +191,7 @@
         <section id="Contato1">
             <div class="Container Flex2">
                 <div class="textoContato">
-                    <a href=""><img src="img/fone.png" alt="Telefone" id="telefone"><h3>(19) 0800 0800</h3></a><br>
+                    <a href=""><img src="img/fone.png" alt="Telefone" id="telefone"><h3>(19) 97816 7330</h3></a><br>
                     <br>
                     <a href="mailto:contato@academiagirassol.com.br?subject=SUPORTE"><img src="img/email.png" alt="Enviar e-mail" id="email">
                     <h3>contato@academiagirassol.com.br</h3></a><br><br>
@@ -217,7 +217,7 @@
         <div class="linebot">
         
         </div>
-        <div class="Container">
+        <div class="Container" id="creditotxt">
             <br><br>
             <h3>© 2024 - Skyy Design</h3>
         </div>
