--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
                 </div>
-                <a href="https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever">INSCREVER-SE</button></a>
+                <a onclick="return false;" href="https://pay.hotmart.com/W92532436G?checkoutMode=10" class="hotmart-fb hotmart__button-checkout"><button id="Inscrever">COMPRAR AGORA</button></a>
                 </div>
     </section>
     <!-- nullpoint -->
