--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="info-container">
                 <h3 class="header">Manicure e Pedicure</h3>
                 <h2 class="text">Curso de Manicure</h2>
-                <a href="#Cursos"><button>Saiba mais!</button></a>
+                <a href="https://academiagirassol.hotmart.host/design-de-unhas" target="_blank"><button>Saiba mais!</button></a>
             </div>
         </div>
         <div class="carousel-cell" style="background-image: url(img/afiacaobg.jpg); top: -30px;">
