atualização de preço

--- a/index.html
+++ b/index.html
@@ -153,8 +153,14 @@
                     <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p><br>
                     <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
+                    <div class="presso">
+                    <h2>De:</h2>
+                    <h1><s>R$ 1.499,00</s></h1>
+                    <h2>Por apenas:</h2>
+                    <h1>R$ 1.199,00!</h1>
+                    </div>
                 </div>
-                <a onclick="return false;" href="https://pay.hotmart.com/W92532436G?checkoutMode=10" class="hotmart-fb hotmart__button-checkout"><button id="Inscrever">COMPRAR AGORA</button></a>
+                <a onclick="return false;" href="https://pay.hotmart.com/W92532436G?off=1dxtukrk&checkoutMode=10&bid=1715518562014" class="hotmart-fb hotmart__button-checkout"><button id="Inscrever">COMPRAR AGORA</button></a>
                 </div>
     </section>
     <!-- nullpoint -->
