atualização de foto da escola

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <a href="#Servicos"><button >Fale conosco!</button></a>
             </div>
         </div>
-        <div class="carousel-cell" style="background-image: url(img/fundo.jpg);">
+        <div class="carousel-cell" style="background-image: url(img/FOTO2.jpg);">
             <div class="info-container">
                 <h3 class="header" style="margin-left: -10px;">Sobre nossa</h3>
                 <h2 class="text">Escola</h2>
