atualização de compatibilidade com tablets e desktops mais fracos, *necessita atenção ainda

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <!-- DESIGN DE SOBRANCELHAS --> 
                 <div class="Container">
                     <div class="destaqueSobre2">
-                        <h1><strong>Curso de Design de Sobrancelhas</strong></h1><br>
+                        <h1><strong>Curso de Design em Sobrancelhas</strong></h1><br>
                         <h2>Eleve seu olhar com nosso curso de design de sobrancelhas!<br> Domine técnicas profissionais, aprenda os segredos do visagismo e conquiste sobrancelhas perfeitas.<br></h2><br>
                     </div>
                     <div class="infocurso1">
@@ -268,8 +268,8 @@
                         <div class="contact">
                             <section id="Contato">
                                 <div class="Container  Flex4">
-                                    <a href="https://www.facebook.com/academygirassol" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
-                                    <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+                                    <a href="https://www.facebook.com/academygirassol" target="_blank"><img src="img/facebook.png" alt="Facebook" id="Facebook"/></a>
+                                    <a href="https://www.instagram.com/academiagirassol/" target="_blank"><img src="img/instagram.png" alt="Instagram" id="Instagram"/></a>
                                 </div>
                             </section>
                          </div>
