adicionado efeito de suavização de scroll via fade-in-section

--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
     <section id="Servicos">   
         <div class="Container Row">
             <div class="content" id="animatedtxt3">
-                <div class="destaqueSobre3">
+                <div class="destaqueSobre3 fade-in-section">
                     <h1><strong>Serviço de Afiação de Alicates para Manicure Profissional</strong></h1>
                     <!-- <h1><strong>• Girassol •</strong></h1><br> -->
                     <h3> </h3><br>
                 </div>
                  <div class="textoSobre3">
-                    <div class="destaqueserv"><p>Você sabia que a afiação regular dos seus alicates para unhas é essencial para garantir resultados impecáveis e seguros em suas manicures? Estamos aqui para cuidar da qualidade e eficácia dos seus instrumentos de trabalho, oferecendo um serviço especializado de afiação de alicates para manicure.                        
+                    <div class="destaqueserv fade-in-section"><p>Você sabia que a afiação regular dos seus alicates para unhas é essencial para garantir resultados impecáveis e seguros em suas manicures? Estamos aqui para cuidar da qualidade e eficácia dos seus instrumentos de trabalho, oferecendo um serviço especializado de afiação de alicates para manicure.                        
                         Nossos profissionais altamente qualificados e experientes utilizam técnicas precisas e equipamentos de última geração para restaurar o corte afiado dos seus alicates, garantindo que você possa realizar manicures com precisão e confiança.</p><br>
                         </div>
-                        <div class="textoservicos">
+                        <div class="textoservicos fade-in-section">
                         <br><h3>Por que escolher nossos serviços de afiação de alicates:</h3><br>
                         <b>Segurança em Primeiro Lugar:</b><br> Manter seus alicates afiados é essencial para evitar lesões e garantir a segurança tanto dos profissionais quanto dos clientes durante os procedimentos de manicure. <br><br>
                         <p><b>Qualidade Garantida:</b><br> Comprometemo-nos em fornecer afiação de alta qualidade, preservando a integridade dos seus alicates e garantindo resultados excepcionais. <br><br>
@@ -102,7 +102,7 @@
                     <p>Entre em contato conosco hoje mesmo para saber mais sobre nossos serviços de afiação de alicates e agende uma afiação para seus instrumentos de trabalho indispensáveis!</p>
                 </div>
             </div>
-            <div class="foto3" alt="INSCREVA-SE!" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
+            <div class="foto3 fade-in-section" alt="INSCREVA-SE!" id="servicepic" onclick="window.open('https://abrir.link/BOhfx', '_blank');">
                 <a href="https://abrir.link/BOhfx" target="_blank" rel="noopener noreferrer" id="botaoservico">Whatsapp</a>
             </div>
         </div>
@@ -112,16 +112,16 @@
     </div>
     <!-- Sobre -->
     <section id="Sobre">   
-        <div class="Container Row">
-            <div class="foto" id="userpic">
+        <div class="Container Row fade-in-section">
+            <div class="foto fade-in-section" id="userpic">
             </div>
-            <div class="content" id="animatedtxt">
+            <div class="content fade-in-section" id="animatedtxt">
                 <div class="destaqueSobre">
                     <!-- <h1><strong>Academia de Beleza</strong></h1>
                     <h1><strong>• Girassol •</strong></h1><br> -->
                     <h3> </h3><br>
                 </div>
-                 <div class="textoSobre">
+                 <div class="textoSobre fade-in-section">
                         <p>Bem-vindo à Academia de Beleza Girassol, um espaço dedicado à transformação, não apenas na aparência, mas também na vida das pessoas. Somos uma instituição de ensino especializada em cursos de beleza, comprometida em proporcionar conhecimento técnico e prático de alta qualidade para todos que desejam ingressar e prosperar no setor de beleza. <br><br>
                         <b>Nossa Missão:</b>
                         <br>Nossa missão é empoderar indivíduos através da educação e formação profissional, ajudando-os a alcançar suas metas e sonhos no mundo da beleza. Acreditamos que a educação transforma vidas e que a beleza é uma ferramenta poderosa para o bem-estar e a autoestima. <br>
@@ -144,11 +144,11 @@
     <section id="Cursos">   
         <!-- DESIGN DE UNHAS --> 
         <div class="Container">
-            <div class="destaqueSobre1">
+            <div class="destaqueSobre1 fade-in-section">
                 <h1><strong>Curso de Manicure e Pedicure</strong></h1><br>
                 <h2>Descubra o caminho para se tornar um especialista em cuidados com as mãos e os pés com o nosso curso!</h2><br>
             </div>
-            <div class="infocurso">
+            <div class="infocurso fade-in-section">
                 <h1>Conteúdo Online e Aulas Presenciais:</h1>
                 <h2>Professora presencial para dar o <span style="color: #ff5500;">APOIO</span> necessário aos alunos.</h2><br>
                 <h1>Módulo Duplo:</h1>
@@ -166,19 +166,19 @@
                 <a href="https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever2">INSCREVER-SE</button></a>
             </div>
                 <div class="content" id="animatedtxt2">
-                <div class="textoSobre1">
+                <div class="textoSobre1 fade-in-section">
                     <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p> <br>
                     <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> Com mais de <b>20 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">manicure</span></b>.</p><br>
                     <p>Desde técnicas básicas até os mais avançados truques do ofício, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">unhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
                     <p>Não importa se você está dando os primeiros passos em sua <span style="font-style: italic;">carreira</span> ou buscando aprimoramento <span style="font-style: italic;">profissional</span>, o nosso curso oferece o suporte e conhecimento necessário para você alcançar seus objetivos. Prepare-se para uma jornada emocionante no mundo da <b><span style="font-style: italic;">beleza</span></b> e torne-se o profissional de sucesso que você sempre quis ser com o nosso curso.</p><br><br>
-                    <div class="presso">
+                    <div class="presso fade-in-section">
                     <h2>De:</h2>
                     <h1><s>R$ 1.499,00</s></h1>
                     <h2>Por apenas:</h2>
                     <h1>R$ 999,90!</h1>
                     </div>
                 </div>
-                <a onclick="return false;" href="https://pay.hotmart.com/W92532436G?off=1dxtukrk&checkoutMode=10&bid=1715518562014" class="hotmart-fb hotmart__button-checkout"><button id="Inscrever">COMPRAR AGORA</button></a>
+                <a onclick="return false;" href="https://pay.hotmart.com/W92532436G?off=1dxtukrk&checkoutMode=10&bid=1715518562014" class="hotmart-fb hotmart__button-checkout fade-in-section"><button id="Inscrever">COMPRAR AGORA</button></a>
                 </div>
                 <!-- DIVISÃO MID LINE --> 
                 <div class="linemid">
@@ -186,11 +186,11 @@
                 </div>
                 <!-- DESIGN DE SOBRANCELHAS --> 
                 <div class="Container">
-                    <div class="destaqueSobre2">
+                    <div class="destaqueSobre2 fade-in-section">
                         <h1><strong>Curso de Design em Sobrancelhas</strong></h1><br>
                         <h2>Eleve seu olhar com nosso curso de design de sobrancelhas!<br> Domine técnicas profissionais, aprenda os segredos do visagismo e conquiste sobrancelhas perfeitas.<br></h2><br>
                     </div>
-                    <div class="infocurso1">
+                    <div class="infocurso1 fade-in-section">
                         <h1>Conteúdo Online e Aulas Presenciais:</h1>
                         <h2>Professora presencial para dar o <span style="color: #ff5500;">APOIO</span> necessário aos alunos.</h2><br>
                         <h1>Módulo Duplo:</h1>
@@ -205,12 +205,12 @@
                         <h2>Assim que a sua inscrição for confirmada <br> você vai receber o acesso <span style="color: #ff5500;">IMEDIATAMENTE</span> em seu email.</h2><br>
                         
                     </div>
-                    <div class="foto4" id="coursepic2" onclick="window.open('https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure.', '_blank');">
+                    <div class="foto4 fade-in-section" id="coursepic2" onclick="window.open('https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure.', '_blank');">
                         <a href="//" target="_blank"><button id="Inscrever2">EM BREVE</button></a>
                         <!-- <a href="https://api.whatsapp.com/send?phone=5519978167330&text=Olá! Eu gostaria de saber mais informações sobre o curso de manicure." target="_blank"><button id="Inscrever2">EM BREVE</button></a> -->
                     </div>
                         <div class="content" id="animatedtxt4">
-                        <div class="textoSobre2">
+                        <div class="textoSobre2 fade-in-section">
                             <p>Em uma abordagem dinâmica semi-presencial, nossa academia oferece uma experiência única, combinando aprendizado <i><b>prático presencial</b></i> e <i><b>teórico online</b></i> para prepará-lo para o mercado de trabalho.</p> <br>
                             <p>Sob a orientação experiente de nossa dedicada <span style="font-weight: bold;">professora</span>, você será imerso em um <b>conteúdo abrangente, detalhado e atualizado.</b> Com mais de <b>10 anos</b> de experiência no ramo e um histórico de sucesso na formação de centenas de profissionais, nossa <b>professora presencial</b> é o alicerce perfeito para a sua jornada rumo à <b><span style="font-style: italic;">excelência</span></b> na profissão de <b><span style="color: #ff7700;">designer de sobrancelhas</span></b>.</p><br>
                             <p>Desde o ZERO até o avançado, nosso curso é projetado para capacitá-lo com as habilidades essenciais necessárias para se destacar no mercado. Você aprenderá não apenas a embelezar as <b><span style="color: #ff6a00;">sobrancelhas</span></b>, mas também a cuidar da <b><span style="color: #ff5500;">saúde</span></b> e bem-estar de seus clientes, garantindo serviços de <b><span style="color: #ff6a00;">qualidade</span></b> e segurança.</p><br>
